@@ -55,6 +55,7 @@ Included
 - Shadow-audit fixture suite now includes capability anomaly coverage for WARN vs threshold-driven DENY (`attemptedWithoutRequest`, `allowedWithoutEvidence`, `inconsistent`).
 - Shadow-audit fixture suite now includes sequence anomaly coverage for WARN vs threshold-driven DENY (`missing`, `extra`, `reordered`, `duplicate`).
 - Shadow-audit fixture suite now also pins schema-invalid `streamNonce` and bounds-exceeded behavior (event count cap and per-event key cap).
+- Shadow-audit privacy guard now treats key aliases like `user_id` / `session-id` as forbidden identifier fields (fixture-pinned).
 - Universal artifact adapter expansion (analysis-only, deterministic, fail-closed):
 - New safe-run adapter flags: `--adapter auto|none|archive|package|extension|iac|cicd|document|container|image|scm|signature`
 - Optional repeatable plugin flag: `--enable-plugin <name>` (explicit local plugin use only)
